# bevy-easy-gif

./: CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: test.yml
assets/: index.html
examples/: 3d.rs  5n1.rs  basic.rs  brothers.rs  despawn.rs  ui.rs
src/: lib.rs
src/gif/: components.rs  events.rs  messages.rs  mod.rs  plugin.rs  systems.rs
